Merge branch 'spreadsheet-imports' into 'main'
Spreadsheet imports

See merge request ggb/geogebra!9125

GitOrigin-RevId: cb860e5dca1dd9748d7bddde2c179cde8f700869